[gd_scene load_steps=5 format=3 uid="uid://ck2258bnfsuro"]

[ext_resource type="Script" path="res://game/levels/poem_level.gd" id="1_37ium"]
[ext_resource type="FontFile" uid="uid://c5c50h8m5nfnb" path="res://assets/fonts/Commodore Pixelized v1.2.ttf" id="1_l0iq4"]

[sub_resource type="LabelSettings" id="LabelSettings_ad57c"]
font = ExtResource("1_l0iq4")
font_size = 10
font_color = Color(0.933333, 0.933333, 0.466667, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yie28"]
font = ExtResource("1_l0iq4")
font_size = 10
font_color = Color(0.360784, 0.698039, 0.329412, 1)

[node name="PoemLevel" type="Node"]
script = ExtResource("1_37ium")

[node name="Label0" type="Label" parent="."]
offset_right = 289.0
offset_bottom = 12.0
text = "Poem from \"Ruddigore\" by W.S. Gilbert"
label_settings = SubResource("LabelSettings_ad57c")
uppercase = true

[node name="Label1" type="Label" parent="."]
offset_top = 12.0
offset_right = 312.0
offset_bottom = 52.0
text = "When the night wind howls
in the chimney cowls,
and the bat in the moonlight flies ..."
label_settings = SubResource("LabelSettings_yie28")
uppercase = true

[node name="Label2" type="Label" parent="."]
offset_top = 50.0
offset_right = 264.0
offset_bottom = 86.0
text = "And inky clouds
like funeral shrouds,
sail over the midnight skies ..."
label_settings = SubResource("LabelSettings_yie28")
uppercase = true

[node name="Label3" type="Label" parent="."]
offset_top = 90.0
offset_right = 280.0
offset_bottom = 126.0
text = "When the footpads quail
at the night-bird's wail,
and black dogs bay at the moon ..."
label_settings = SubResource("LabelSettings_yie28")
uppercase = true

[node name="Label4" type="Label" parent="."]
offset_top = 130.0
offset_right = 235.0
offset_bottom = 156.0
text = "Then is the spectres' holiday,
then is the ghosts' high-noon!"
label_settings = SubResource("LabelSettings_yie28")
uppercase = true
